2011-06-29 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/styles/pandora.css
	operation/agentes/status_events.php
	general/pandora_help.php
	general/logon_ok.php: Css style improvements.

2011-06-28 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/styles/pandora.css
	include/functions_ui.php
	images/skin/skin_default/include/styles/pandora.css: Modifications
	over css styles.

2011-06-28 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* extensions/module_groups/brick.png
	images/skin/skin_default/images/agents_group.png
	images/skin/skin_default/images/note.png
	images/skin/skin_default/images/os_icons/android_small.png: Added 
	new icons.
	
	* include/styles/pandora.css
	include/functions_ui.php
	extensions/insert_data.php
	extensions/system_info.php
	extensions/pandora_logs.php
	extensions/agents_modules.php
	extensions/resource_registration.php
	extensions/resource_exportation.php
	extensions/module_groups.php
	extensions/update_manager/main.php
	extensions/plugin_registration.php
	operation/extensions.php
	operation/visual_console/render_view.php
	operation/visual_console/index.php
	operation/agentes/status_monitor.php
	operation/agentes/alerts_status.php
	operation/agentes/estado_ultimopaquete.php
	operation/agentes/custom_fields.php
	operation/agentes/estado_generalagente.php
	operation/agentes/estado_agente.php
	operation/agentes/status_events.php
	operation/agentes/sla_view.php
	operation/agentes/exportdata.php
	operation/agentes/estado_monitores.php
	operation/agentes/ver_agente.php
	operation/agentes/group_view.php
	operation/agentes/networkmap.php
	operation/users/user_edit.php
	operation/gis_maps/index.php
	operation/events/events_list.php
	operation/messages/message.php
	operation/reporting/custom_reporting.php
	images/skin/skin_default/include/styles/pandora.css
	extras/pandora_diag.php
	general/logon_ok.php
	godmode/groups/modu_group_list.php
	godmode/groups/configure_group.php
	godmode/groups/configure_modu_group.php