@@ -1,0 +1,15 @@
+<?php
+/**
+ * @package Include/help/es
+ */
+?>
+<h1>Tipos de trap</h1>
+<ul>
+    <li>Cold start (0): Indica que el agente ha sido inicializado o reinicializado;</li>
+    <li>Warm start (1): Indica que la configuración del agente ha cambiado;</li>
+    <li>Link down (2): Indica que una interfaz de comunicación se encuentra fuera de servicio (inactiva);</li>
+    <li>Link up (3): Indica que una interfaz de comunicación se encuentra en servicio (activa);</li>
+    <li>Authentication failure (4): Indica que el agente ha recibido un requerimiento de un NMS no autorizado (normalmente controlado por una comunidad);</li>
+    <li>EGP neighbor loss (5): Indica que en sistemas en que los routers están utilizando el protocolo EGP, un equipo colindante se encuentra fuera de servicio;</li>
+    <li>Enterprise (6): En esta categoría se encuentran todos los nuevos traps incluidos por los vendedores.</li>
+</ul>
