@@ -19,6 +19,7 @@
 global $config;
 enterprise_include ("operation/snmpconsole/snmp_view.php");
 require_once("include/functions_agents.php");
+require_once("include/functions_snmp.php");
 
 check_login ();
 
@@ -38,7 +39,16 @@ $filter_status = (int) get_parameter ("filter_status", 0);
 $search_string = (string) get_parameter ("search_string", '');
 $pagination = (int) get_parameter ("pagination", $config["block_size"]);
 $offset = (int) get_parameter ('offset',0);
+$snmp_host_address = (string) get_parameter ("snmp_host_address", 'localhost');
+$snmp_community = (string) get_parameter ("snmp_community", 'public');
+$snmp_oid = (string) get_parameter ("snmp_oid", '');
+$snmp_agent = (string) get_parameter ("snmp_agent", '');
+$snmp_value = (string) get_parameter ("snmp_value", '');
+$snmp_type = (int) get_parameter ("snmp_type", 0);
+$generate_trap = (bool) get_parameter ("generate_trap", 0);
+
 $url = "index.php?sec=snmpconsole&sec2=operation/snmpconsole/snmp_view&filter_agent=".$filter_agent."&filter_oid=".$filter_oid."&filter_severity=".$filter_severity."&filter_fired=".$filter_fired."&search_string=".$search_string."&pagination=".$pagination."&offset=".$offset;
+
 
 if ($config["pure"]) {
 	$link = '<a target="_top" href="'.$url.'&pure=0&refr=30">' . html_print_image("images/normalscreen.png", true, array("title" => __('Normal screen')))  . '</a>';
@@ -117,6 +127,20 @@ if (isset ($_POST["updatebt"])) {
 	}
 }
 
+if($generate_trap) {
+	$result = true;
+	if($snmp_host_address != '' && $snmp_community != '' && $snmp_oid != '' && $snmp_agent != '' && $snmp_value != '' && $snmp_type != -1) {
+		snmp_generate_trap($snmp_host_address, $snmp_community, $snmp_oid, $snmp_agent, $snmp_value, $snmp_type);
+	}
+	else {
+		$result = false;
+	}
+	
+	ui_print_result_message ($result,
+	__('Successfully generated'),
+	__('Could not be generated'));
+}
+
 switch ($config["dbtype"]) {
 	case "mysql":
 		$sql = sprintf ("SELECT * FROM ttrap ORDER BY timestamp DESC LIMIT %d,%d",$offset,$pagination);
@@ -146,10 +170,42 @@ if (empty ($traps)) {
 	return;
 }
 
-// Toggle filters
-echo '<a href="#" onmousedown="toggleDiv(\'filters\');"><b>'.__('Toggle filter(s)').'</b>&nbsp;' . html_print_image("images/down.png", true) . '</a>';
+$traps_generator = '<form method="POST" action="index.php?sec=snmpconsole&sec2=operation/snmpconsole/snmp_view&refr='.$config["refr"].'&pure='.$config["pure"].'">';
+$table->width = '90%';
+$table->size = array ();
+$table->data = array ();
 
-echo '<form method="POST" action="index.php?sec=snmpconsole&sec2=operation/snmpconsole/snmp_view&refr='.$config["refr"].'&pure='.$config["pure"].'">';
+$table->data[0][0] = __('Host address');
+$table->data[0][1] = html_print_input_text('snmp_host_address', $snmp_host_address, '', 50, 255, true);
+
+$table->data[1][0] = __('Community');
+$table->data[1][1] = html_print_input_text('snmp_community', $snmp_community, '', 50, 255, true);
+
+$table->data[2][0] = __('OID');
+$table->data[2][1] = html_print_input_text('snmp_oid', $snmp_oid, '', 50, 255, true);
+
+$table->data[3][0] = __('SNMP Agent');
+$table->data[3][1] = html_print_input_text('snmp_agent', $snmp_agent, '', 50, 255, true);
+
+$table->data[4][0] = __('SNMP Type').' '.ui_print_help_icon ("snmp_trap_types", true);
+$table->data[4][1] = html_print_input_text('snmp_type', $snmp_type, '', 50, 255, true);
+
+$types = array(0 => 'Cold start (0)', 1 => 'Warm start (1)', 2 => 'Link down (2)', 3 => 'Link up (3)', 4 => 'Authentication failure (4)', 5 => 'EGP neighbor loss (5)', 6 => 'Enterprise (6)');
+$table->data[4][1] = html_print_select($types, 'snmp_type', $snmp_type, '', __('Select'), -1, true, false, false);
+
+$table->data[5][0] = __('Value');
+$table->data[5][1] = html_print_input_text('snmp_value', $snmp_value, '', 50, 255, true);
+
+
+$traps_generator .= html_print_table($table, true);
+$traps_generator .= '<div style="width:'.$table->width.'; text-align: right;">'.html_print_submit_button(__('Generate trap'), 'btn_generate_trap', false, 'class="sub cog"', true).'</div>';
+$traps_generator .= html_print_input_hidden('generate_trap', 1, true);
+
+unset($table);
+$traps_generator .= '</form>';
+
+ui_toggle($traps_generator, __('Trap generator'));
+
 $table->width = '90%';
 $table->size = array ();
 $table->size[0] = '120px';
@@ -272,13 +328,6 @@ if (($config['dbtype'] == 'oracle') && ($traps !== false)) {
 	}
 }
 
-if ($config["pure"] == 1) {
-	echo '<div id="filters" style="display:none;">';
-}
-else {
-	echo '<div id="filters" style="display: none;">';
-}
-
 // Agent select
 $table->data[0][0] = '<strong>'.__('Agent').'</strong>';
 $table->data[0][1] = html_print_select ($agents, 'filter_agent', $filter_agent, 'javascript:this.form.submit();', __('All'), '', true);
@@ -315,13 +364,13 @@ $status[0] = __('Not validated');
 $status[1] = __('Validated');
 $table->data[3][1] = html_print_select ($status, 'filter_status', $filter_status, 'this.form.submit();', '', '', true);
 
-html_print_table ($table);
+$filter = '<form method="POST" action="index.php?sec=snmpconsole&sec2=operation/snmpconsole/snmp_view&refr='.$config["refr"].'&pure='.$config["pure"].'">';
+$filter .= html_print_table($table, true);
+$filter .= '</form>';
+
+ui_toggle($filter, __('Toggle filter(s)'));
+
 unset ($table);
-
-echo '</form>';
-echo '</div>';
-
-echo '<br />';
 
 // Prepare index for pagination
 $trapcount = db_get_sql ("SELECT COUNT(*) FROM ttrap " . $whereSubquery);
@@ -330,7 +379,7 @@ $urlPagination = "index.php?sec=snmpconsole&sec2=operation/snmpconsole/snmp_view
 	. "&filter_oid=" . $filter_oid . "&filter_severity=" . $filter_severity
 	. "&filter_fired=" . $filter_fired . "&filter_status=" . $filter_status
 	. "&search_string=" . $search_string . "&pagination=".$pagination."&offset=".$offset."&refr=".$config["refr"]."&pure=".$config["pure"];
-pagination ($trapcount, $urlPagination, $offset, $pagination);
+ui_pagination ($trapcount, $urlPagination, $offset, $pagination);
 
 echo '<form name="eventtable" method="POST" action="index.php?sec=snmpconsole&sec2=operation/snmpconsole/snmp_view&pagination='.$pagination.'&offset='.$offset.'">';
 
